--- a/templates/principal.html
+++ b/templates/principal.html
@@ -7,32 +7,26 @@
 <body>
 <script type=text/javascript src="{{url_for('static', filename='jquery-3.1.1.min.js') }}"></script>
 <script type="text/javascript">
-  // This is called with the results from from FB.getLoginStatus().
+
   function statusChangeCallback(response) {
     console.log('statusChangeCallback');
     console.log(response);
-    // The response object is returned with a status field that lets the
-    // app know the current login status of the person.
-    // Full docs on the response object can be found in the documentation
-    // for FB.getLoginStatus().
-    if (response.status === 'connected') {
-      // Logged into your app and Facebook.
-      testAPI();
-    } else if (response.status === 'not_authorized') {
-      // The person is logged into Facebook, but not your app.
+
+    if (response.status === 'connected')
+     {      
+      incializar();
+    } 
+    else if (response.status === 'not_authorized')
+    {     
       document.getElementById('status').innerHTML = 'Please log ' +
         'into this app.';
-    } else {
-      // The person is not logged into Facebook, so we're not sure if
-      // they are logged into this app or not.
+    } else 
+    {     
       document.getElementById('status').innerHTML = 'Please log ' +
         'into Facebook.';
     }
   }
 
-  // This function is called when someone finishes with the Login
-  // Button.  See the onlogin handler attached to it in the sample
-  // code below.
   function checkLoginState() {
     FB.getLoginStatus(function(response) {
       statusChangeCallback(response);
@@ -40,29 +34,19 @@
   }
 
   window.fbAsyncInit = function() {
-  FB.init({
-    appId      : '400417863497411',
-    cookie     : true,  // enable cookies to allow the server to access 
-                        // the session
-    xfbml      : true,  // parse social plugins on this page
-    version    : 'v2.8' // use graph api version 2.8
-  });
+    FB.init({
+      appId      : '400417863497411',
+      cookie     : true,  // enable cookies to allow the server to access 
+                          // the session
+      xfbml      : true,  // parse social plugins on this page
+      version    : 'v2.8' // use graph api version 2.8
+    });
 
-  // Now that we've initialized the JavaScript SDK, we call 
-  // FB.getLoginStatus().  This function gets the state of the
-  // person visiting this page and can return one of three states to
-  // the callback you provide.  They can be:
-  //
-  // 1. Logged into your app ('connected')
-  // 2. Logged into Facebook, but not your app ('not_authorized')
-  // 3. Not logged into Facebook and can't tell if they are logged into
-  //    your app or not.
-  //
-  // These three cases are handled in the callback function.
-
-  FB.getLoginStatus(function(response) {
-    statusChangeCallback(response);
-  });
+   
+    FB.getLoginStatus(function(response) 
+    {
+      statusChangeCallback(response);
+    });
 
   };
 
@@ -75,33 +59,47 @@
     fjs.parentNode.insertBefore(js, fjs);
   }(document, 'script', 'facebook-jssdk'));
 
-  // Here we run a very simple test of the Graph API after login is
-  // successful.  See statusChangeCallback() for when this call is made.
-  function testAPI() {
+  var resultLogar = []
+  function incializar() 
+  {
+    
     console.log('Welcome!  Fetching your information.... ');
     FB.api('/me', function(response) {
-      console.log('Successful login for: ' + response.name);
-      alert(window.location.host+ "/logar/"+ response.id);
+      console.log('Successful login for: ' + response.name);     
       $.ajax({
-        url: window.location.host+ "/logar/"+ response.id,
-        success: function(result){
-        $("#status").html(result);
-      }});       
+        url: "/logar/"+ response.id,
+        success: function(result)
+        {        
+        resultLogar = JSON.parse(result);
+        primeiroLogin(resultLogar[0]);
+      }});      
      
     });
   }
+
+
+  function primeiroLogin(user_id)
+  {
+    $.ajax({
+        url: "/tops/",
+        success: function(result)
+        { 
+          bandas = JSON.parse(result);       
+          $("#primeiroLogin").html(result);
+      }}); 
+  }
 </script>
 
-<!--
-  Below we include the Login Button social plugin. This button uses
-  the JavaScript SDK to present a graphical Login button that triggers
-  the FB.login() function when clicked.
--->
 
-<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-</fb:login-button>
+<div class="logar">
+  <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+  </fb:login-button>
+</div>
 
-<div id="status">
+
+<div id="primeiroLogin">
+
+
 </div>
 
 </body>
