--- a/templates/principal.html
+++ b/templates/principal.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Facebook Login JavaScript Example</title>
+<title>Sistema de Recomendacao de musica</title>
 <meta charset="UTF-8">
 </head>
 <body>
+
 <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='principal.css') }}">
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 <!-- <script type=text/javascript src="{{url_for('static', filename='jquery-3.1.1.min.js') }}"></script> -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -156,13 +165,12 @@ var bandas = [];
                       }        
                       
                       console.log(stringBusca);
+                      $("#telaRecomendar").html('<iframe src="https://embed.spotify.com/?uri=spotify:trackset:PREFEREDTITLE:'+stringBusca+'" theme="white" width="600" height="680" frameborder="0" allowtransparency="true"></iframe>');
                       /*$("#primeiroLogin").html(stringBusca);                      */
                 }});    
 
           } 
-
-          //alert(stringBusca);      
-           $("#telaRecomendar").html('<iframe src="https://embed.spotify.com/?uri=spotify:trackset:PREFEREDTITLE:'+stringBusca+'" theme="white" width="600" height="680" frameborder="0" allowtransparency="true"></iframe>');
+           
           }}
       ); 
   }
@@ -170,8 +178,16 @@ var bandas = [];
 
 
 <div class="logar">
-  <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-  </fb:login-button>
+   <div class="container" style="margin-top: 10%; width: 500px;"> 
+      
+      <form action="LogarUsuario" method="post">
+        <h2 class="form-signin-heading"><img alt="Parannus" style="width: 300px; margin-left: 20%; margin-top: 1%; margin-bottom: 10%;">Sistema de Recomendação de Musica</h2>
+        <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+        </fb:login-button>
+      </form>
+      
+    </div> 
+  
 </div>
 
 
