--- a/static/principal.css
+++ b/static/principal.css
@@ -11,3 +11,11 @@ body {
     height: auto;
     position: absolute;
 }*/
+
+#telaRecomendar 
+{
+    height: 80%;
+    margin-left: 30%;
+    margin-top: 70px;
+    width: 80%;
+}
