--- a/static/principal.css
+++ b/static/principal.css
@@ -12,10 +12,10 @@ body {
     position: absolute;
 }*/
 
-#telaRecomendar 
+/*#telaRecomendar 
 {
     height: 80%;
     margin-left: 30%;
     margin-top: 70px;
     width: 80%;
-}
+}*/
