--- a/templates/principal.html
+++ b/templates/principal.html
@@ -13,11 +13,12 @@
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-<!--  -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="{{url_for('static', filename='jquery.blockUI.js') }}"></script>
 <script type="text/javascript">
 
   function statusChangeCallback(response) {
@@ -87,39 +88,55 @@
           $("#photoUsuario").attr("src","http://graph.facebook.com/"+response.id+"/picture?type=normal");
           // Se o for a primeira vez a logar, iniciar a tela em que ele escolhe bandas favoritas.
           if(resultLogar[1] == true) {            
-            primeiroLogin(resultLogar[0], response.name);
+            primeiroLogin(resultLogar[0]);
           }
           else {
             //recomendar(resultLogar[0]); Usar quando a tela do primeiro Login estiver Funcionando.
-            recomendar(resultLogar[0], response.name);
+            recomendar(resultLogar[0]);
           }
-      }});      
+      }}); 7     
      
     });
   }
 
   function primeiroLogin(user_id, user_name) {
+
+    $.blockUI({ message: '<h1>Carregando...</h1>' });
+
     $.ajax({
         url: "/tops/",
         success: function(result) {
           bandas = JSON.parse(result);   
+          
+          console.log("Primeiro");
+          console.log(bandas);
 
-          $(".logar").hide();
+          $(".logarFacebook").hide();
 
-          $("#primeiroLogin").append("<H1 Bem vindo, "+user_name);
-          $("#primeiroLogin").append("<form action=''>");
+          $("#listaBandas").html("");
 
+          $("#listaBandas").append("<h2 class='form-signin-heading'>Selecione as bandas preferidas:</h2>")                  
+          $("#listaBandas").append("<div class='row'><form action=''>");
 
           for (i in bandas) {
             var banda = bandas[i];
-            $("#primeiroLogin").append("<input type='checkbox' name='banda' value='"+banda+"'id='bandas'>"+banda+"</input><br>");  
-          }
+            $("#listaBandas").append("<div class='col-sm-6'><input type='checkbox' name='banda' style='margin-left:20px; font-size:18px; margin-right:5px;' value='"+banda+"'id='bandas'>"+banda+"</input></div>");              
 
-          $("#primeiroLogin").append("<button type='button' id='buttonRecomende'>Recomende-me</button>");
-          $("#primeiroLogin").append("</form>");
+            if(i%2 != 0){
+                $("#listaBandas").append("<br>");
+            }
+          }
+        
+          $("#listaBandas").append("</form></div>");
+          $("#listaBandas").append("<br><br><br><button type='button' id='buttonRecomende' style='background-color:#4267b2;color:white; border:none; padding:6px 12px;float:right; width:100%;'>Recomende-me</button>");
+
+          $("#listaBandas").append("<br><br><br><button type='button' id='buttonTroca' style='background-color:#4267b2;color:white; border:none; padding:6px 12px;float:right; width:100%;'>Trocar opções</button>");
 
           var escolhidas = '';
           $("#buttonRecomende").click(function() {
+
+              $.blockUI({ message: '<h1>Carregando...</h1>' });
+              
               $("input:checkbox[name='banda']:checked").each(function(){                
                   if (escolhidas == '') {
                       escolhidas = $(this).val();
@@ -128,23 +145,33 @@
                   }
               });
 
-              console.log(escolhidas);
-
-
               $.ajax({
                 url: "/knowUser/"+escolhidas+"/"+ user_id,
-                success: function(result) {        
-                  //resultLogar = JSON.parse(result);                                                             
-                  console.log(result);
+                success: function(result) { 
+                  if (result == 'True'){
+                    recomendar(user_id);
+                  }                  
                 }
               })
+
+              $(document).ajaxStop($.unblockUI);
+          });
+
+
+          $("#buttonTroca").click(function() {
+              primeiroLogin(user_id, user_name);
           });
       }}); 
+
+      $(document).ajaxStop($.unblockUI);
   }
 
 var bandasSpotify = [];
 var bandas = [];
   function recomendar(user_id, user_name) {
+
+    $.blockUI({ message: '<h1>Carregando...</h1>' });
+
     var stringBusca = "";
     $.ajax({
         url: "/top/"+user_id,
@@ -152,56 +179,61 @@ var bandas = [];
           bandas = JSON.parse(result);
           
           console.log(bandas);
-          
-          $(".logar").hide();
-          $("#primeiroLogin").append("<H1 Bem vindo, "+user_name);
+          if(bandas.length > 0){
+              $(".logarFacebook").hide();          
 
-          for(x = 0 ;x<bandas.length;x++) {                          
-                $.ajax({
-                  url: "https://api.spotify.com/v1/search?q=artist%3A"+bandas[x].replace(" ","+")+"&type=track&limit=1",
-                  success: function(result) {                      
-                      if(stringBusca == "") {
-                          stringBusca = result.tracks.items[0].id;
-                      } else {
-                          stringBusca = stringBusca + "," + result.tracks.items[0].id
-                      }        
-                      
-                      console.log(stringBusca);
-                      $("#telaRecomendar").html('<iframe src="https://embed.spotify.com/?uri=spotify:trackset:PREFEREDTITLE:'+stringBusca+'" theme="white" width="600" height="550" frameborder="0" allowtransparency="true"></iframe>');
-                      /*$("#primeiroLogin").html(stringBusca);                      */
-                }});    
+              $("#primeiroLogin").append("<h2 class='form-signin-heading'>Músicas recomendadas:</h2>")
 
-          } 
-           
+              for(x = 0 ;x<bandas.length;x++) {                          
+                    $.ajax({
+                      url: "https://api.spotify.com/v1/search?q=artist%3A"+bandas[x].replace(" ","+")+"&type=track&limit=1",
+                      success: function(result) {                      
+                          if(stringBusca == "") {
+                              stringBusca = result.tracks.items[0].id;
+                          } else {
+                              stringBusca = stringBusca + "," + result.tracks.items[0].id
+                          }        
+                          
+                          $("#listaBandas").hide();
+                          console.log(stringBusca);
+                          $("#telaRecomendar").html('<iframe src="https://embed.spotify.com/?uri=spotify:trackset:PREFEREDTITLE:'+stringBusca+'" theme="white" width="100%" height="550" frameborder="0" allowtransparency="true"></iframe>');
+                          /*$("#primeiroLogin").html(stringBusca);                      */
+
+                          $.unblockUI();
+                          $(document).ajaxStop($.unblockUI);
+                    }});    
+
+              }   
+          } else {
+            primeiroLogin(user_id, user_name);
+          }
           }}
       ); 
+
+    $(document).ajaxStop($.unblockUI);
   }
 </script>
 
 {% include 'header.html' %}
 
 <div class="logar">
-   <div class="container" style="margin-top: 10%; width: 500px;"> 
-      
-      <form action="LogarUsuario" method="post">
-        <h2 class="form-signin-heading"><img alt="Parannus" style="width: 300px; margin-left: 20%; margin-top: 1%; margin-bottom: 10%;">Sistema de Recomendação de Musica</h2>
-        <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-        </fb:login-button>
-      </form>
-      
+   <div class="container" style="margin-top: 10%; width: 600px; background-color: white"> 
+      <div class="logarFacebook"> 
+        <form action="LogarUsuario" method="post">
+          <h2 class="form-signin-heading">Sistema de Recomendação de Musica</h2>
+          <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+          </fb:login-button>
+        </form>
+      </div>
+     
+      <div id="primeiroLogin"> </div>
+
+      <div id="listaBandas"> </div>
+
+      <div id="telaRecomendar"> </div>
+
     </div> 
   
-</div>
-
-
-<div id="primeiroLogin">
-
-
-</div>
-
-<div id="telaRecomendar">
-
-
 </div>
 
 </body>
