Altering spotify color

--- a/templates/principal.html
+++ b/templates/principal.html
@@ -215,7 +215,7 @@ var bandas = [];
                           
                           $("#listaBandas").hide();
 
-                          $("#telaRecomendar").html('<iframe src="https://embed.spotify.com/?uri=spotify:trackset:PREFEREDTITLE:'+stringBusca+'" theme="white" width="100%" height="550" frameborder="0" allowtransparency="true"></iframe>');
+                          $("#telaRecomendar").html('<iframe src="https://embed.spotify.com/?uri=spotify:trackset:PREFEREDTITLE:'+stringBusca+'&theme=white" width="100%" height="550" frameborder="0" allowtransparency="true"></iframe>');
                           /*$("#primeiroLogin").html(stringBusca);                      */
 
                     }});    
